feat: finalização das barbearias recomendadas, ainda falta corrigir um problema com a posição dos botões quando o endereço da barbearia é maior do que o endereço de outra. começando a construir a parte das barbearias populares

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 <h3>Corte de Cabelo</h3>
                 <div class="barbearia_info">
                     <img src="./img/avatar.jpg" alt="foto de perfil da barbearia">
-                    <p>nome da barbearia</p>
+                    <h3>nome da barbearia</h3>
                 </div>
             </div>
             <div class="agendamento_data">
                 <p>Agosto</p>
-                <h4>16</h3>
-                <p>16:00</p>
+                <h2>19</h2>
+                <p>19:25</p>
             </div>
         </div>
     </div>
@@ -65,26 +65,60 @@
                 <ul>
                     <li>
                         <div class="barbearia_recom">
-                            <img src="./img/" alt="barbearia do zé exemplo">
+                            <img src="./img/avatar.jpg" alt="barbearia do zé exemplo">
                             <div class="avaliacao">
-                                <img src="./img/" alt="estrelinha de avaliaçao">
-                                <span>5,0</span>
+                                <span class="material-symbols-outlined">star</span>
+                                <h5>5,0</h5>
                             </div>
-                            <span>nome da barbearia</span>
-                            <p>endereço</p>
-                            <button class="barbearia_reservar">Reservar</button>
+                            <div class="barbe_info">
+                                <h3 class="nom_barbearia">Clássica Cortez</h3>
+                                <p>Rua Castro Alves, 331, São Paulo</p>
+                                <button class="barbearia_reservar">Reservar</button>
+                            </div>
                         </div>
                     </li>
                     <li>
                         <div class="barbearia_recom">
-                            <img src="./img/" alt="barbearia do zé exemplo">
+                            <img src="./img/avatar.jpg" alt="barbearia do zé exemplo">
                             <div class="avaliacao">
-                                <img src="./img/" alt="estrelinha de avaliaçao">
-                                <span>5,0</span>
+                                <span class="material-symbols-outlined">star</span>
+                                <h5>5,0</h5>
                             </div>
-                            <span>nome da barbearia</span>
-                            <p>endereço</p>
-                            <button class="barbearia_reservar">Reservar</button>
+
+                            <div class="barbe_info">
+                                <h3 class="nom_barbearia">Vintage Barber</h3>
+                                <p>Avenida São Sebastião, 357, São Paulo</p>
+                                <button class="barbearia_reservar">Reservar</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="barbearia_recom">
+                            <img src="./img/avatar.jpg" alt="barbearia do zé exemplo">
+                            <div class="avaliacao">
+                                <span class="material-symbols-outlined">star</span>
+                                <h5>5,0</h5>
+                            </div>
+                            <div class="barbe_info">
+                                <h3 class="nom_barbearia">Clássica Cortez</h3>
+                                <p>Rua Castro Alves, 331, São Paulo</p>
+                                <button class="barbearia_reservar">Reservar</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="barbearia_recom">
+                            <img src="./img/avatar.jpg" alt="barbearia do zé exemplo">
+                            <div class="avaliacao">
+                                <span class="material-symbols-outlined">star</span>
+                                <h5>5,0</h5>
+                            </div>
+
+                            <div class="barbe_info">
+                                <h3 class="nom_barbearia">Vintage Barber</h3>
+                                <p>Avenida São Sebastião, 357, São Paulo</p>
+                                <button class="barbearia_reservar">Reservar</button>
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -96,25 +130,25 @@
                 <ul>
                     <li>
                         <div class="barbearia_popu">
-                            <img src="./img/" alt="barbearia do zé exemplo">
+                            <img src="./img/avatar.jpg" alt="barbearia do zé exemplo">
                             <div class="avaliacao">
-                                <img src="./img/" alt="estrelinha de avaliaçao">
-                                <span>5,0</span>
+                                <span class="material-symbols-outlined">star</span>
+                                <h5>5,0</h5>
                             </div>
-                            <span>nome da barbearia</span>
-                            <p>endereço</p>
+                            <h3>Los Barberos</h3>
+                            <p>Rua Sete de Setembro, 428, São Paulo</p>
                             <button class="barbearia_reservar">Reservar</button>
                         </div>
                     </li>
                     <li>
                         <div class="barbearia_popu">
-                            <img src="./img/" alt="barbearia do zé exemplo">
+                            <img src="./img/avatar.jpg" alt="barbearia do zé exemplo">
                             <div class="avaliacao">
-                                <img src="./img/" alt="estrelinha de avaliaçao">
-                                <span>5,0</span>
+                                <span class="material-symbols-outlined">star</span>
+                                <h5>5,0</h5>
                             </div>
-                            <span>nome da barbearia</span>
-                            <p>endereço</p>
+                            <h3>Homem Elegante</h3>
+                            <p>Rua Projetada, 529, São Paulo</p>
                             <button class="barbearia_reservar">Reservar</button>
                         </div>
                     </li>
