feat: a lista de barbearias populares foi concluída, porém ainda precisar ser feito alguns ajuste em questão do endereço e a posição do botão

--- a/index.html
+++ b/index.html
@@ -135,9 +135,11 @@
                                 <span class="material-symbols-outlined">star</span>
                                 <h5>5,0</h5>
                             </div>
-                            <h3>Los Barberos</h3>
-                            <p>Rua Sete de Setembro, 428, São Paulo</p>
-                            <button class="barbearia_reservar">Reservar</button>
+                            <div class="barbe_info">
+                                <h3>Los Barberos</h3>
+                                <p>Rua Sete de Setembro, 428, São Paulo</p>
+                                <button class="barbearia_reservar">Reservar</button>
+                            </div>
                         </div>
                     </li>
                     <li>
@@ -147,9 +149,39 @@
                                 <span class="material-symbols-outlined">star</span>
                                 <h5>5,0</h5>
                             </div>
-                            <h3>Homem Elegante</h3>
-                            <p>Rua Projetada, 529, São Paulo</p>
-                            <button class="barbearia_reservar">Reservar</button>
+                            <div class="barbe_info">
+                                <h3>Homem Elegante</h3>
+                                <p>Rua Projetada, 529, São Paulo</p>
+                                <button class="barbearia_reservar">Reservar</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="barbearia_popu">
+                            <img src="./img/avatar.jpg" alt="barbearia do zé exemplo">
+                            <div class="avaliacao">
+                                <span class="material-symbols-outlined">star</span>
+                                <h5>5,0</h5>
+                            </div>
+                            <div class="barbe_info">
+                                <h3>Los Barberos</h3>
+                                <p>Rua Sete de Setembro, 428, São Paulo</p>
+                                <button class="barbearia_reservar">Reservar</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="barbearia_popu">
+                            <img src="./img/avatar.jpg" alt="barbearia do zé exemplo">
+                            <div class="avaliacao">
+                                <span class="material-symbols-outlined">star</span>
+                                <h5>5,0</h5>
+                            </div>
+                            <div class="barbe_info">
+                                <h3>Homem Elegante</h3>
+                                <p>Rua Projetada, 529, São Paulo</p>
+                                <button class="barbearia_reservar">Reservar</button>
+                            </div>
                         </div>
                     </li>
                 </ul>
