feat: tela inicial finalizada, porém ainda precisa ser feito alguns ajustes nas listas das barbearias

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
             <div class="fiel_group">
                 <div class="fiel_search">
                     <input type="text" placeholder="Buscar" class="input_search">
-                    <button class="btn_search"><span class="material-symbols-outlined">
-                        search
-                        </span></button>
+                    <button class="btn_search"><span class="material-symbols-outlined">search</span></button>
                 </div>
                 <div class="search_quicky">
                     <ul>
@@ -189,7 +187,7 @@
         </div>
     </div>
     <footer>
-        <span> 2024 Copyright FSW Barber</span>
+        <span> &copy 2024 Copyright <b>FSW Barber</b></span>
     </footer>
 </body>
 </html>
